--- a/index.html
+++ b/index.html
@@ -14,78 +14,113 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 
+
 <body>
 
-<header>
-   <h1>Rocket<span>Coffee</spam></h1>
-   <p>Todos os dias. 8h-21hrs </p>
-</header>
-
-<section>
-  <h2>Brunch</h2>
-
-  <ul>
-    <li>
-      <div class="Details">
-        <h3>Waffle Doce</h3>
-          <p class="Description"> 
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-          </p>
-      </div>
-
-      <strong class="price">
-        R$37.70
-      </strong>
-    </li>
-
- <li>
-      <div class="Details">
-        <h3>Maça Doce</h3>
-          <p class="Description"> 
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-          </p>
-      </div>
-
-      <strong class="price">
-        R$17.70
-      </strong>
-    </li>
-
-  </ul>
-</section>
-
-<section>
-  <h2>Bebidas</h2>
-
-  <ul>
-    <li>
-      <div class="Details">
-        <h3>Vinho</h3>
-          <p class="Description"> 
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-          </p>
-      </div>
-
-      <strong class="price">
-        R$37.70
-      </strong>
-    </li>
-
- <li>
-      <div class="Details">
-        <h3>Agua</h3>
-          <p class="Description"> 
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-          </p>
-      </div>
-
-      <strong class="price">
-        R$17.70
-      </strong>
-    </li>
-
-  </ul>
-</section>
-
-</body>
+  <header>
+     <h1>Rocket<span>Coffee</spam></h1>
+     <p>Todos os dias. 8h-21hrs </p>
+  </header>
+  
+  <section>
+    <h2>Brunch</h2>
+  
+    <ul>
+      <li>
+        <div class="Details">
+          <h3>Waffle Doce</h3>
+            <p class="Description"> 
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            </p>
+        </div>
+  
+        <strong class="price">
+          R$37.70
+        </strong>
+      </li>
+  
+   <li>
+        <div class="Details">
+          <h3>Maça Doce</h3>
+            <p class="Description"> 
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            </p>
+        </div>
+  
+        <strong class="price">
+          R$17.70
+        </strong>
+      </li>
+  
+    </ul>
+  </section>
+  
+  <section>
+    <h2>Bebidas</h2>
+  
+    <ul>
+      <li>
+        <div class="Details">
+          <h3>Vinho</h3>
+            <p class="Description"> 
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            </p>
+        </div>
+  
+        <strong class="price">
+          R$37.70
+        </strong>
+      </li>
+  
+   <li>
+        <div class="Details">
+          <h3>Agua</h3>
+            <p class="Description"> 
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            </p>
+        </div>
+  
+        <strong class="price">
+          R$17.70
+        </strong>
+      </li>
+  
+    </ul>
+  </section>
+  
+  <section>
+    <h2>Comidas</h2>
+  
+    <ul>
+      <li>
+        <div class="Details">
+          <h3>Hamburguer</h3>
+            <p class="Description"> 
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            </p>
+        </div>
+  
+        <strong class="price">
+          R$37.70
+        </strong>
+      </li>
+  
+   <li>
+        <div class="Details">
+          <h3>X-tudo</h3>
+            <p class="Description"> 
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            </p>
+        </div>
+  
+        <strong class="price">
+          R$17.70
+        </strong>
+      </li>
+  
+    </ul>
+  </section>
+  
+  
+  </body>
 </html>
